--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,6 +77,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="walk",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
 +ActionMappings=(ActionName="sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="PAUSE",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=P)
++ActionMappings=(ActionName="PAUSE",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
 +AxisMappings=(AxisName="Forward/Backward",Scale=1.000000,Key=A)
 +AxisMappings=(AxisName="Forward/Backward",Scale=-1.000000,Key=D)
 +AxisMappings=(AxisName="Left/Right",Scale=1.000000,Key=W)
