--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Default_Maps/default_map.default_map
+GameDefaultMap=/Game/Priyanshu/level/MENU1.MENU1
 EditorStartupMap=/Game/Default_Maps/default_map.default_map
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
